--- a/limbo/affiliate/templates/blog/mobile_10k/mobile_10k.html
+++ b/limbo/affiliate/templates/blog/mobile_10k/mobile_10k.html
@@ -68,7 +68,7 @@
               <form action="https://www.flipkart.com/motorola-g8-power-lite-arctic-blue-64-gb/p/itm9d7b62a81c100?pid=MOBFZ5EXDKHFV832&lid=LSTMOBFZ5EXDKHFV832SY9PU2&marketplace=FLIPKART&srno=s_1_1&otracker=AS_QueryStore_OrganicAutoSuggest_2_4_na_na_na&otracker1=AS_QueryStore_OrganicAutoSuggest_2_4_na_na_na&fm=SEARCH&iid=4f1ec90b-b08b-45ae-b94b-dc9c80e3038c.MOBFZ5EXDKHFV832.SEARCH&ppt=sp&ppn=sp&ssid=9xevxowr740000001594824843895&qH=c7b38449af1e8e16">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
               </form>
-              <form action="https://www.flipkart.com/search?q=moto+g8+power+lite&sid=tyy%2C4io&as=on&as-show=on&otracker=AS_QueryStore_OrganicAutoSuggest_2_4_na_na_na&otracker1=AS_QueryStore_OrganicAutoSuggest_2_4_na_na_na&as-pos=2&as-type=RECENT&suggestionId=moto+g8+power+lite%7CMobiles&requestId=2daaab06-3434-4d2b-8325-fc5b2fb6298b&as-searchtext=moto">
+              <form action="https://www.flipkart.com/motorola-g8-power-lite-arctic-blue-64-gb/p/itm9d7b62a81c100?pid=MOBFZ5EXDKHFV832&lid=LSTMOBFZ5EXDKHFV832SY9PU2&marketplace=FLIPKART&srno=s_1_1&otracker=AS_QueryStore_OrganicAutoSuggest_2_4_na_na_na&otracker1=AS_QueryStore_OrganicAutoSuggest_2_4_na_na_na&fm=SEARCH&iid=4f1ec90b-b08b-45ae-b94b-dc9c80e3038c.MOBFZ5EXDKHFV832.SEARCH&ppt=sp&ppn=sp&ssid=9xevxowr740000001594824843895&qH=c7b38449af1e8e16">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
@@ -100,7 +100,7 @@
               <form action="https://www.flipkart.com/realme-narzo-10a-so-blue-32-gb/p/itmbeb412dade152?pid=MOBFQ36AYV4ZG4E4&lid=LSTMOBFQ36AYV4ZG4E4LAVPVB&marketplace=FLIPKART&srno=s_1_1&otracker=AS_QueryStore_OrganicAutoSuggest_2_9_na_na_ps&otracker1=AS_QueryStore_OrganicAutoSuggest_2_9_na_na_ps&fm=SEARCH&iid=3d6a8d66-cc83-419c-aa73-8ce755b9be72.MOBFQ36AYV4ZG4E4.SEARCH&ppt=sp&ppn=sp&ssid=9mk09b2mvk0000001594825007834&qH=9036ff25ac09bf22">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
               </form>
-              <form action="https://www.flipkart.com/search?q=realme+narzo+10a&sid=tyy%2C4io&as=on&as-show=on&otracker=AS_QueryStore_OrganicAutoSuggest_2_9_na_na_ps&otracker1=AS_QueryStore_OrganicAutoSuggest_2_9_na_na_ps&as-pos=2&as-type=RECENT&suggestionId=realme+narzo+10a%7CMobiles&requestId=ed97512d-93f6-449c-b234-a65ec9486b51&as-searchtext=realme%20na">
+              <form action="https://www.flipkart.com/realme-narzo-10a-so-blue-32-gb/p/itmbeb412dade152?pid=MOBFQ36AYV4ZG4E4&lid=LSTMOBFQ36AYV4ZG4E4LAVPVB&marketplace=FLIPKART&srno=s_1_1&otracker=AS_QueryStore_OrganicAutoSuggest_2_9_na_na_ps&otracker1=AS_QueryStore_OrganicAutoSuggest_2_9_na_na_ps&fm=SEARCH&iid=3d6a8d66-cc83-419c-aa73-8ce755b9be72.MOBFQ36AYV4ZG4E4.SEARCH&ppt=sp&ppn=sp&ssid=9mk09b2mvk0000001594825007834&qH=9036ff25ac09bf22">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
@@ -130,9 +130,9 @@
           </ul>
             <div class="aff-link1">
               <form action="https://www.flipkart.com/redmi-8-sapphire-blue-64-gb/p/itmd1c68a1a86f5e?pid=MOBFKPYDENDXZZ7U&lid=LSTMOBFKPYDENDXZZ7U9TT5NP&marketplace=FLIPKART&srno=s_1_1&otracker=AS_QueryStore_OrganicAutoSuggest_1_6_na_na_ps&otracker1=AS_QueryStore_OrganicAutoSuggest_1_6_na_na_ps&fm=SEARCH&iid=0caf0a6f-17d1-408b-824c-30d175ee5e71.MOBFKPYDENDXZZ7U.SEARCH&ppt=sp&ppn=sp&ssid=nwbrhfjpv40000001594825150480&qH=8493b7b813dbef9d">
-                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
               </form>
-              <form action="https://www.flipkart.com/search?q=redmi+8&sid=tyy%2C4io&as=on&as-show=on&otracker=AS_QueryStore_OrganicAutoSuggest_1_6_na_na_ps&otracker1=AS_QueryStore_OrganicAutoSuggest_1_6_na_na_ps&as-pos=1&as-type=RECENT&suggestionId=redmi+8%7CMobiles&requestId=4583db63-ac48-4d21-b2e9-ec625799ca09&as-searchtext=redmi%20">
+              <form action="https://www.flipkart.com/redmi-8-sapphire-blue-64-gb/p/itmd1c68a1a86f5e?pid=MOBFKPYDENDXZZ7U&lid=LSTMOBFKPYDENDXZZ7U9TT5NP&marketplace=FLIPKART&srno=s_1_1&otracker=AS_QueryStore_OrganicAutoSuggest_1_6_na_na_ps&otracker1=AS_QueryStore_OrganicAutoSuggest_1_6_na_na_ps&fm=SEARCH&iid=0caf0a6f-17d1-408b-824c-30d175ee5e71.MOBFKPYDENDXZZ7U.SEARCH&ppt=sp&ppn=sp&ssid=nwbrhfjpv40000001594825150480&qH=8493b7b813dbef9d">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
@@ -165,7 +165,7 @@ Technical cheez-<a href="https://www.youtube.com/watch?v=lRYOq75OVbA">Click here
               <form action="https://www.flipkart.com/realme-c3-frozen-blue-64-gb/p/itm58bf81a807d66?pid=MOBFZHC5QRBG2BSR&lid=LSTMOBFZHC5QRBG2BSRYU9DNF&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=cb19a6e8-33ce-479a-b5bd-5740f2efd14f.MOBFZHC5QRBG2BSR.SEARCH&ppt=sp&ppn=sp&ssid=d9njamubv40000001594825325553&qH=32f7bddd7929438e">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
               </form>
-              <form action="https://www.flipkart.com/search?q=realme%20c3&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
+              <form action="https://www.flipkart.com/realme-c3-frozen-blue-64-gb/p/itm58bf81a807d66?pid=MOBFZHC5QRBG2BSR&lid=LSTMOBFZHC5QRBG2BSRYU9DNF&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=cb19a6e8-33ce-479a-b5bd-5740f2efd14f.MOBFZHC5QRBG2BSR.SEARCH&ppt=sp&ppn=sp&ssid=d9njamubv40000001594825325553&qH=32f7bddd7929438e">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
@@ -198,7 +198,7 @@ Manila Shaker Philippines-<a href="https://www.youtube.com/watch?v=ftGeC3Fce5Y">
               <form action="https://www.flipkart.com/asus-zenfone-max-m1-gold-32-gb/p/itmf9fgsb4e6tz5e?pid=MOBF9FGSZYJFZXJA&lid=LSTMOBF9FGSZYJFZXJA3SCMXG&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=47afdc31-d33f-4ebd-a5b3-487b3589ee43.MOBF9FGSZYJFZXJA.SEARCH&ppt=sp&ppn=sp&ssid=izo5hdo3400000001594825432053&qH=49bc25cf433822c0">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
               </form>
-              <form action="https://www.flipkart.com/search?q=ausu%20zenfone%20%20max%20m1&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
+              <form action="https://www.flipkart.com/asus-zenfone-max-m1-gold-32-gb/p/itmf9fgsb4e6tz5e?pid=MOBF9FGSZYJFZXJA&lid=LSTMOBF9FGSZYJFZXJA3SCMXG&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=47afdc31-d33f-4ebd-a5b3-487b3589ee43.MOBF9FGSZYJFZXJA.SEARCH&ppt=sp&ppn=sp&ssid=izo5hdo3400000001594825432053&qH=49bc25cf433822c0">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
@@ -261,7 +261,7 @@ Manila Shaker Philippines-<a href="https://www.youtube.com/watch?v=ftGeC3Fce5Y">
               <form action="https://www.flipkart.com/redmi-note-7-sapphire-blue-64-gb/p/itmfdzvf8tptnezu?pid=MOBFDXZ3HJJZH3GG&lid=LSTMOBFDXZ3HJJZH3GGXELUJI&marketplace=FLIPKART&srno=s_1_1&otracker=AS_Query_OrganicAutoSuggest_4_12_na_na_ps&otracker1=AS_Query_OrganicAutoSuggest_4_12_na_na_ps&fm=SEARCH&iid=b65b55c1-f00b-4556-b920-7a49e3d0ec55.MOBFDXZ3HJJZH3GG.SEARCH&ppt=sp&ppn=sp&ssid=074r21j2ww0000001594825579224&qH=1cf708419102918e">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
               </form>
-              <form action="https://www.flipkart.com/search?q=redmi+note+7&as=on&as-show=on&otracker=AS_Query_OrganicAutoSuggest_4_12_na_na_ps&otracker1=AS_Query_OrganicAutoSuggest_4_12_na_na_ps&as-pos=4&as-type=RECENT&suggestionId=redmi+note+7&requestId=c57ab7d2-9149-4043-8963-64bf74a6f97b&as-searchtext=redmi%20note%207">
+              <form action="https://www.flipkart.com/redmi-note-7-sapphire-blue-64-gb/p/itmfdzvf8tptnezu?pid=MOBFDXZ3HJJZH3GG&lid=LSTMOBFDXZ3HJJZH3GGXELUJI&marketplace=FLIPKART&srno=s_1_1&otracker=AS_Query_OrganicAutoSuggest_4_12_na_na_ps&otracker1=AS_Query_OrganicAutoSuggest_4_12_na_na_ps&fm=SEARCH&iid=b65b55c1-f00b-4556-b920-7a49e3d0ec55.MOBFDXZ3HJJZH3GG.SEARCH&ppt=sp&ppn=sp&ssid=074r21j2ww0000001594825579224&qH=1cf708419102918e">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
