--- a/limbo/affiliate/templates/mobile/mi/k20/k20.html
+++ b/limbo/affiliate/templates/mobile/mi/k20/k20.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="xiaomi smartphone: New smartphone review and specification, buy at best price from amazon. india's no1 selling smartphone. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Xiaomi released his new smartphone Redmi K20 at price of 21,999-INR, buy at best price from amazon. india's no1 selling smartphone. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="Redmi K20 mobile, Redmi K20 price , Redmi K20 price in india, Redmi K20 review, Redmi K20 specification"> {% endblock key%}
     {% load static %}
-    {% block title%}Redmi K20 Full specification{% endblock title%}
+    {% block title%}Redmi K20 (6/128GB) Full specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
