--- a/limbo/affiliate/templates/mobile/mi/mi 10/mi 10.html
+++ b/limbo/affiliate/templates/mobile/mi/mi 10/mi 10.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="xiaomi smartphone: New smartphone review and specification, buy at best price from amazon. india's no1 selling smartphone. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Xiaomi released his new smartphone Redmi Mi 10 5G at price of 49,999-INR, buy at best price from amazon. india's no1 selling smartphone. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="MI 10 mobile, MI 10 price , MI 10 price in india, MI 10 review, MI 10 specification"> {% endblock key%}
     {% load static %}
-    {% block title%} Mi10 Full specification: hipein.com{% endblock title%}
+    {% block title%} Mi 10 (8/128GB) Full specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
@@ -26,7 +26,7 @@
             <form action="https://www.amazon.in/Test-A6010-Dummy-Asin_42/dp/B07X4R4F4G/ref=sr_1_1?dchild=1&keywords=xiaomi+Mi+10&qid=1594890336&sr=8-1">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
             </form>
-            <form action="https://www.amazon.in/s?k=xiaomi+Mi+10&ref=nb_sb_noss">
+            <form action="https://www.amazon.in/Test-A6010-Dummy-Asin_42/dp/B07X4R4F4G/ref=sr_1_1?dchild=1&keywords=xiaomi+Mi+10&qid=1594890336&sr=8-1">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           </div>
