--- a/limbo/affiliate/templates/mobile/mi/note 9pro max/note 9 pro max.html
+++ b/limbo/affiliate/templates/mobile/mi/note 9pro max/note 9 pro max.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="xiaomi smartphone: New smartphone review and specification, buy at best price from amazon. india's no1 selling smartphone. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Xiaomi released his new phone Redmi Note 9 Pro max at price of 16,999-INR, buy at best price from amazon. india's no1 selling smartphone. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="Redmi Note 9 Pro max mobile, Redmi Note 9 Pro max price , Redmi Note 9 Pro max price in india, Redmi Note 9 Pro max review, Redmi Note 9 Pro max specification"> {% endblock key%}
     {% load static %}
-    {% block title%}Redmi Note 9 Pro max Full specification: hipein.com{% endblock title%}
+    {% block title%}Redmi Note 9 Pro max (6/128GB) Full specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
@@ -24,7 +24,7 @@
             <form action="https://www.amazon.in/Test-Exclusive-558/dp/B077PWJRFH/ref=sr_1_1?dchild=1&keywords=Redmi+Note+9+Pro+Max&qid=1594890267&sr=8-1">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
             </form>
-            <form action="https://www.amazon.in/s?k=Redmi+Note+9+Pro+Max&ref=nb_sb_noss">
+            <form action="https://www.amazon.in/Test-Exclusive-558/dp/B077PWJRFH/ref=sr_1_1?dchild=1&keywords=Redmi+Note+9+Pro+Max&qid=1594890267&sr=8-1">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           </div>
