--- a/limbo/affiliate/templates/mobile/mi/note 9pro/note 9 pro.html
+++ b/limbo/affiliate/templates/mobile/mi/note 9pro/note 9 pro.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="xiaomi smartphone: New smartphone review and specification, buy at best price from amazon. india's no1 selling smartphone. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Xiaomi released his new phone Redmi Note 9 Pro at price of 13,999-INR, buy at best price from amazon. india's no1 selling smartphone. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="Redmi Note 9 pro mobile, Redmi Note 9 pro price ,Redmi Note 9 pro price in india, Redmi Note 9 pro review, Redmi Note 9 pro specification"> {% endblock key%}
     {% load static %}
-    {% block title%}Redmi Note 9 pro Full specification: hipein.com{% endblock title%}
+    {% block title%}Redmi Note 9 pro (4/64GB) Full specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
@@ -25,7 +25,7 @@
             <form action="https://www.amazon.in/Test-Exclusive-549/dp/B077PWBC78/ref=sr_1_1?dchild=1&keywords=Redmi+Note+9+Pro&qid=1594890388&sr=8-1">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
             </form>
-            <form action="https://www.amazon.in/s?k=Redmi+Note+9+Pro&ref=nb_sb_noss">
+            <form action="https://www.amazon.in/Test-Exclusive-549/dp/B077PWBC78/ref=sr_1_1?dchild=1&keywords=Redmi+Note+9+Pro&qid=1594890388&sr=8-1">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           </div>
