--- a/limbo/affiliate/templates/mobile/mi/redmi 8/redmi 8.html
+++ b/limbo/affiliate/templates/mobile/mi/redmi 8/redmi 8.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="xiaomi smartphone: New smartphone review and specification, buy at best price from amazon. india's no1 selling smartphone. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Xiaomi released his new smartphone Redmi 8 at price of 9,949-INR, buy at best price from flipkart. india's no1 selling smartphone. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="Redmi 8 mobile, Redmi 8 price , Redmi 8 price in india, Redmi 8 review, Redmi 8 specification"> {% endblock key%}
     {% load static %}
-    {% block title%}Redmi 8 Full specification{% endblock title%}
+    {% block title%}Redmi 8 (4/64GB) Full specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
@@ -24,7 +24,7 @@
             <form action="https://www.flipkart.com/redmi-8-onyx-black-64-gb/p/itmebd23d8a2ed1b?pid=MOBFKPYDZJQHGJXA&lid=LSTMOBFKPYDZJQHGJXAPMDXOB&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=7eb39bee-baa5-42c0-8d00-79a6cb033924.MOBFKPYDZJQHGJXA.SEARCH&ppt=sp&ppn=sp&ssid=e8efv76aog0000001594890817032&qH=b190950d47ba7008">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
             </form>
-            <form action="https://www.flipkart.com/search?q=%20Redmi%208&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
+            <form action="https://www.flipkart.com/redmi-8-onyx-black-64-gb/p/itmebd23d8a2ed1b?pid=MOBFKPYDZJQHGJXA&lid=LSTMOBFKPYDZJQHGJXAPMDXOB&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=7eb39bee-baa5-42c0-8d00-79a6cb033924.MOBFKPYDZJQHGJXA.SEARCH&ppt=sp&ppn=sp&ssid=e8efv76aog0000001594890817032&qH=b190950d47ba7008">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           </div>
