--- a/limbo/affiliate/templates/mobile/mi/redmi 8A/redmi 8A.html
+++ b/limbo/affiliate/templates/mobile/mi/redmi 8A/redmi 8A.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="xiaomi smartphone: New smartphone review and specification, buy at best price from amazon. india's no1 selling smartphone. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Xiaomi released his new smartphone Redmi 8A at price of 6,999-INR, buy at best price from amazon. india's no1 selling smartphone. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="Redmi 8A mobile, Redmi 8A price , Redmi 8A price in india, Redmi 8A review, Redmi 8A specification"> {% endblock key%}
     {% load static %}
-    {% block title%}Redmi 8A Full specification{% endblock title%}
+    {% block title%}Redmi 8A (2/32GB) Full specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
