--- a/limbo/affiliate/templates/blog/battery/battery.html
+++ b/limbo/affiliate/templates/blog/battery/battery.html
@@ -151,7 +151,7 @@
               <form action="https://www.flipkart.com/realme-x50-pro-moss-green-256-gb/p/itm13d1770db35a3?pid=MOBFP6WYFBVHDHY8&lid=LSTMOBFP6WYFBVHDHY8GUPJMY&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=5c3e5225-3028-4b4e-af5c-510ccc2cf0cc.MOBFP6WYFBVHDHY8.SEARCH&ppt=sp&ppn=sp&ssid=0qxmlq7xkg0000001594897469059&qH=02a00971e865e045">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
               </form>
-              <form action="https://www.flipkart.com/search?q=Realme%20X50%20Pro&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
+              <form action="https://www.flipkart.com/realme-x50-pro-moss-green-256-gb/p/itm13d1770db35a3?pid=MOBFP6WYFBVHDHY8&lid=LSTMOBFP6WYFBVHDHY8GUPJMY&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=5c3e5225-3028-4b4e-af5c-510ccc2cf0cc.MOBFP6WYFBVHDHY8.SEARCH&ppt=sp&ppn=sp&ssid=0qxmlq7xkg0000001594897469059&qH=02a00971e865e045">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
@@ -215,7 +215,7 @@
               <form action="https://www.amazon.in/Test-Exclusive-549/dp/B077PWBC78/ref=sr_1_1?dchild=1&keywords=Redmi+Note+9+Pro&qid=1594890388&sr=8-1" class="affilated-link_amazon">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
               </form>
-              <form action="https://www.amazon.in/s?k=Redmi+Note+9+Pro&ref=nb_sb_noss" class="affilated-link_flipcart">
+              <form action="https://www.amazon.in/Test-Exclusive-549/dp/B077PWBC78/ref=sr_1_1?dchild=1&keywords=Redmi+Note+9+Pro&qid=1594890388&sr=8-1" class="affilated-link_flipcart">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
@@ -342,7 +342,7 @@
               <form action="https://www.flipkart.com/poco-x2-phoenix-red-64-gb/p/itmda7dd1f37ffff?pid=MOBFZGJ6Q9A5FHRC&lid=LSTMOBFZGJ6Q9A5FHRCENQ0C3&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=0aaa5110-3c94-425c-b6a5-1c61bf21fd5e.MOBFZGJ6Q9A5FHRC.SEARCH&ppt=sp&ppn=sp&ssid=wt92tb7hjk0000001594877583665&qH=9b170a335b7c1e38">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
               </form>
-              <form action="https://www.flipkart.com/search?q=%20Poco%20X2&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off" class="affilated-link_flipcart">
+              <form action="https://www.flipkart.com/poco-x2-phoenix-red-64-gb/p/itmda7dd1f37ffff?pid=MOBFZGJ6Q9A5FHRC&lid=LSTMOBFZGJ6Q9A5FHRCENQ0C3&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=0aaa5110-3c94-425c-b6a5-1c61bf21fd5e.MOBFZGJ6Q9A5FHRC.SEARCH&ppt=sp&ppn=sp&ssid=wt92tb7hjk0000001594877583665&qH=9b170a335b7c1e38" class="affilated-link_flipcart">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
