--- a/limbo/affiliate/templates/blog/best-top-10/best-top-10.html
+++ b/limbo/affiliate/templates/blog/best-top-10/best-top-10.html
@@ -53,7 +53,7 @@
               <form action="https://www.amazon.in/Apple-iPhone-Pro-Max-256GB/dp/B07XVMDRZW/ref=sr_1_1_sspa?dchild=1&keywords=Iphone+11+Pro+Max&qid=1594877931&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFHWFZBNFJYNjE4M0kmZW5jcnlwdGVkSWQ9QTAzODg5MjgxQktROVdQVzZOTThKJmVuY3J5cHRlZEFkSWQ9QTA5MTUwNzExNktFQjRNUERQSE9VJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
               </form>
-              <form action="https://www.amazon.in/s?k=Iphone+11+Pro+Max&ref=nb_sb_noss" class="affilated-link_flipcart">
+              <form action="https://www.amazon.in/Apple-iPhone-Pro-Max-256GB/dp/B07XVMDRZW/ref=sr_1_1_sspa?dchild=1&keywords=Iphone+11+Pro+Max&qid=1594877931&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFHWFZBNFJYNjE4M0kmZW5jcnlwdGVkSWQ9QTAzODg5MjgxQktROVdQVzZOTThKJmVuY3J5cHRlZEFkSWQ9QTA5MTUwNzExNktFQjRNUERQSE9VJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" class="affilated-link_flipcart">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
@@ -152,7 +152,7 @@
               <form action="https://www.flipkart.com/realme-x50-pro-moss-green-256-gb/p/itm13d1770db35a3?pid=MOBFP6WYFBVHDHY8&lid=LSTMOBFP6WYFBVHDHY8GUPJMY&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=7fd7f31d-28e2-45e4-a9c6-bddaf40d42e0.MOBFP6WYFBVHDHY8.SEARCH&ppt=sp&ppn=sp&ssid=rspngialrk0000001594878128792&qH=02a00971e865e045">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
               </form>
-              <form action="https://www.flipkart.com/search?q=Realme%20X50%20Pro&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
+              <form action="https://www.flipkart.com/realme-x50-pro-moss-green-256-gb/p/itm13d1770db35a3?pid=MOBFP6WYFBVHDHY8&lid=LSTMOBFP6WYFBVHDHY8GUPJMY&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=7fd7f31d-28e2-45e4-a9c6-bddaf40d42e0.MOBFP6WYFBVHDHY8.SEARCH&ppt=sp&ppn=sp&ssid=rspngialrk0000001594878128792&qH=02a00971e865e045">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
@@ -184,7 +184,7 @@
               <form action="https://www.flipkart.com/iqoo-3-tornado-black-128-gb/p/itm7d075bc17be11?pid=MOBFP4P2CESTHKKR&lid=LSTMOBFP4P2CESTHKKRXDMNL7&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=fa796d16-cde0-4643-9d74-e99dbc3cf4de.MOBFP4P2CESTHKKR.SEARCH&ppt=sp&ppn=sp&ssid=veomc0y2hs0000001594878188036&qH=7f1eb59e160c7bc8">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
               </form>
-              <form action="https://www.flipkart.com/search?q=%20IQOO%203&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
+              <form action="https://www.flipkart.com/iqoo-3-tornado-black-128-gb/p/itm7d075bc17be11?pid=MOBFP4P2CESTHKKR&lid=LSTMOBFP4P2CESTHKKRXDMNL7&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=fa796d16-cde0-4643-9d74-e99dbc3cf4de.MOBFP4P2CESTHKKR.SEARCH&ppt=sp&ppn=sp&ssid=veomc0y2hs0000001594878188036&qH=7f1eb59e160c7bc8">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
@@ -213,10 +213,10 @@
             <li>Fast charging 30W</li>
           </ul>
             <div class="aff-link1">
-              <form action="https://www.amazon.in/Test-Exclusive-749/dp/B07DJ8K2KT/ref=sr_1_1?dchild=1&keywords=Oneplus+7T+Pro&qid=1594878348&sr=8-1" class="affilated-link_amazon">
+              <form action="https://www.amazon.in/Test-Exclusive-749/dp/B07DJ8K2KT/ref=sr_1_1?dchild=1&keywords=Oneplus+7T+Pro&qid=1594878348&sr=8-1">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
               </form>
-              <form action="https://www.amazon.in/s?k=Oneplus+7T+Pro&ref=nb_sb_noss" class="affilated-link_flipcart">
+              <form action="https://www.amazon.in/Test-Exclusive-749/dp/B07DJ8K2KT/ref=sr_1_1?dchild=1&keywords=Oneplus+7T+Pro&qid=1594878348&sr=8-1" >
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
@@ -245,10 +245,10 @@
             <li>Fast charging 40W, 70% in 30 min</li>
           </ul>
             <div class="aff-link1">
-              <form action="https://www.amazon.in/Huawei-Breathing-Crystal-256GB-Storage/dp/B07PPVCBZS/ref=sr_1_1?dchild=1&keywords=Huawei+P30+Pro&qid=1594878448&sr=8-1" class="affilated-link_amazon">
+              <form action="https://www.amazon.in/Huawei-Breathing-Crystal-256GB-Storage/dp/B07PPVCBZS/ref=sr_1_1?dchild=1&keywords=Huawei+P30+Pro&qid=1594878448&sr=8-1">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
               </form>
-              <form action="https://www.amazon.in/Huawei-Breathing-Crystal-256GB-Storage/dp/B07PPVCBZS/ref=sr_1_1?dchild=1&keywords=Huawei+P30+Pro&qid=1594878448&sr=8-1" class="affilated-link_flipcart">
+              <form action="https://www.amazon.in/Huawei-Breathing-Crystal-256GB-Storage/dp/B07PPVCBZS/ref=sr_1_1?dchild=1&keywords=Huawei+P30+Pro&qid=1594878448&sr=8-1">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
@@ -280,7 +280,7 @@
               <form action="https://www.flipkart.com/apple-iphone-xr-white-256-gb/p/itmf9z7zsx9keyup?pid=MOBF9Z7ZEHAGRKZC&lid=LSTMOBF9Z7ZEHAGRKZCAQAGGA&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=1662fd75-4660-46e8-8218-e71089792204.MOBF9Z7ZEHAGRKZC.SEARCH&ppt=sp&ppn=sp&ssid=knpc87w7q80000001594878482055&qH=6c10c248289756ad">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
               </form>
-              <form action="https://www.flipkart.com/search?q=Apple%20Iphone%20XR&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
+              <form action="https://www.flipkart.com/apple-iphone-xr-white-256-gb/p/itmf9z7zsx9keyup?pid=MOBF9Z7ZEHAGRKZC&lid=LSTMOBF9Z7ZEHAGRKZCAQAGGA&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=1662fd75-4660-46e8-8218-e71089792204.MOBF9Z7ZEHAGRKZC.SEARCH&ppt=sp&ppn=sp&ssid=knpc87w7q80000001594878482055&qH=6c10c248289756ad">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
@@ -313,7 +313,7 @@
               <form action="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B07KXC7QS4/ref=sr_1_1?dchild=1&keywords=Samsung+Galaxy+S10%2B&qid=1594878654&sr=8-1">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
               </form>
-              <form action="https://www.amazon.in/s?k=Samsung+Galaxy+S10%2B&ref=nb_sb_noss">
+              <form action="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B07KXC7QS4/ref=sr_1_1?dchild=1&keywords=Samsung+Galaxy+S10%2B&qid=1594878654&sr=8-1">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
