--- a/limbo/affiliate/templates/mobile/mi/Note 7pro/note 7 pro.html
+++ b/limbo/affiliate/templates/mobile/mi/Note 7pro/note 7 pro.html
@@ -1,15 +1,15 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="xiaomi smartphone: New smartphone review and specification, buy at best price from amazon. india's no1 selling smartphone. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Xiaomi released his new smartphone Redmi Note 7 Pro at price of 10,999-INR, buy at best price from amazon. india's no1 selling smartphone. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="Redmi Note 7 Pro mobile, Redmi Note 7 Pro price , Redmi Note 7 Pro price in india, Redmi Note 7 Pro review, Redmi Note 7 Pro specification"> {% endblock key%}
     {% load static %}
-    {% block title%}Redmi Note 7 Pro Full specification: hipein.com{% endblock title%}
+    {% block title%}Redmi Note 7 Pro (4/64GB) Full specification - hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Xiaomi released his new smartphone Redmi Note 7 Pro at price of 10,999INR</h4>
+          <h4 class="content">Xiaomi released his new smartphone Redmi Note 7 Pro at price of 10,999-INR</h4>
           <h2 class="content_tittle"><span>REVIEW</span> Redmi Note 7 Pro : 4/64GB for 10,999INR Watch Full review-<a href="https://www.youtube.com/watch?v=IapEQIuXYHw">http://www.youtube.com </a></h2>
         </div>
         <div >
