--- a/limbo/affiliate/templates/mobile/mi/note 8 pro/note 8 pro.html
+++ b/limbo/affiliate/templates/mobile/mi/note 8 pro/note 8 pro.html
@@ -1,15 +1,15 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="xiaomi smartphone: New smartphone review and specification, buy at best price from amazon. india's no1 selling smartphone. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Xiaomi released his new phone Redmi Note 8 Pro at price of 15,999-INR, buy at best price from amazon. india's no1 selling smartphone. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="Redmi Note 8 Pro mobile, Redmi Note 8 Pro price , Redmi Note 8 Pro price in india, Redmi Note 8 Pro review, Redmi Note 8 Pro specification"> {% endblock key%}
     {% load static %}
-    {% block title%}Redmi Note 8 pro Full specification: hipein.com{% endblock title%}
+    {% block title%}Redmi Note 8 pro (6/64GB) Full specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Xiaomi released his new phone Redmi Note 8 Pro at price of 15,999INR</h4>
+          <h4 class="content">Xiaomi released his new phone Redmi Note 8 Pro at price of 15,999-INR</h4>
           <h2 class="content_tittle"><span>REVIEW</span> Redmi Note 8 Pro: 6/64GB for 15,999INR Watch Full review-<a href="https://www.youtube.com/watch?v=5jWhgMMw_eQ">http://www.youtube.com </a></h2>
         </div>
         <div >
