--- a/limbo/affiliate/templates/mobile/mi/note 8/note 8.html
+++ b/limbo/affiliate/templates/mobile/mi/note 8/note 8.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="xiaomi smartphone: New smartphone review and specification, buy at best price from amazon. india's no1 selling smartphone. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Xiaomi released his new smartphone Redmi Note 8 at price of 11,999INR, buy at best price from amazon. india's no1 selling smartphone. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="Redmi Note 8 mobile, Redmi Note 8 price , Redmi Note 8 price in india, Redmi Note 8 review, Redmi Note 8 specification"> {% endblock key%}
     {% load static %}
-    {% block title%}Redmi Note 8 Full specification{% endblock title%}
+    {% block title%}Redmi Note 8 (6/64GB) Full specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
