--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 3T/OnePlus_3T.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 3T/OnePlus_3T.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="oneplus smartphone: all New smartphone review and specification, buy at best price from amazon."> {% endblock desc%}
+{% block desc%}<meta name="description" content="OnePlus released his new smartphone OnePlus 3T at price of Rs.19,949, buy at best price from amazon."> {% endblock desc%}
 {% block key%}<meta name="keywords" content="oneplus 3T mobile, oneplus 3T mobile price, oneplus 3T mobile phone, oneplus 3T mobile price list, oneplus 3T mobile price in india, oneplus 3T price in amazon, oneplus 3T flipkart, oneplus 3T specification, oneplus 3T review, oneplus 3T will be available on amazon"> {% endblock key%}
     {% load static %}
-    {% block title%}OnePlus 3T Full specification: hipein.com{% endblock title%}
+    {% block title%}OnePlus 3T (6/64GB) Full specification - hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
 
