--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 5/OnePlus_5.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 5/OnePlus_5.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="oneplus smartphone: all New smartphone review and specification, buy at best price from amazon."> {% endblock desc%}
+{% block desc%}<meta name="description" content="OnePlus released his new smartphone OnePlus 5 at price of Rs.28,999, buy at best price from amazon."> {% endblock desc%}
 {% block key%}<meta name="keywords" content="oneplus 5 mobile, oneplus 5 mobile price, oneplus 5 mobile phone, oneplus 5 mobile price list, oneplus 5 mobile price in india, oneplus 5 price in amazon, oneplus 5 flipkart, oneplus 5 specification, oneplus 5 review, oneplus 5 will be available on amazon"> {% endblock key%}
     {% load static %}
-    {% block title%}OnePlus 5 Full specification: hipein.com{% endblock title%}
+    {% block title%}OnePlus 5 (6/64GB) Full specification: hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
