--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 6T/OnePlus_6T.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 6T/OnePlus_6T.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="oneplus smartphone: all New smartphone review and specification, buy at best price from amazon."> {% endblock desc%}
+{% block desc%}<meta name="description" content="OnePlus released his new smartphone OnePlus 6T at price of Rs.39,999, buy at best price from flipkart."> {% endblock desc%}
 {% block key%}<meta name="keywords" content="oneplus 6T mobile, oneplus 6T mobile price, oneplus 6T mobile phone, oneplus 6T mobile price list, oneplus 6T mobile price in india, oneplus 6T price in amazon, oneplus 6T flipkart, oneplus 6T specification, oneplus 6T review, oneplus 6T will be available on amazon"> {% endblock key%}
     {% load static %}
-    {% block title%}OnePlus 6T Full specification: hipein.com{% endblock title%}
+    {% block title%}OnePlus 6T (10/256GB) Full specification: hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
