--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 7T/OnePlus_7T.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 7T/OnePlus_7T.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="oneplus smartphone: all New smartphone review and specification, buy at best price from amazon."> {% endblock desc%}
+{% block desc%}<meta name="description" content="OnePlus released his new smartphone OnePlus 7T at price of Rs.36,780, buy at best price from amazon."> {% endblock desc%}
 {% block key%}<meta name="keywords" content="oneplus 7T mobile, oneplus 7T mobile price, oneplus 7T mobile phone, oneplus 7T mobile price list, oneplus 7T mobile price in india, oneplus 7T price in amazon, oneplus 7T flipkart, oneplus 7T specification, oneplus 7T review, oneplus 7T will be available on amazon"> {% endblock key%}
     {% load static %}
-    {% block title%}OnePlus 7T Full specification: hipein.com{% endblock title%}
+    {% block title%}OnePlus 7T ( 8/128GB) Full specification - hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
