--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 8/OnePlus_8.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 8/OnePlus_8.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="oneplus smartphone: all New smartphone review and specification, buy at best price from amazon."> {% endblock desc%}
+{% block desc%}<meta name="description" content="OnePlus released his new smartphone OnePlus 8 at price of Rs.44,999, buy at best price from amazon."> {% endblock desc%}
 {% block key%}<meta name="keywords" content="oneplus 8 mobile, oneplus 8 mobile price, oneplus 8 mobile phone, oneplus 8 mobile price list, oneplus 8 mobile price in india, oneplus 8 price in amazon, oneplus 8 flipkart, oneplus 8 specification, oneplus 8 review, oneplus 8 will be available on amazon"> {% endblock key%}
   {% load static %}
-    {% block title%}OnePlus 8 Full specification: hipein.com{% endblock title%}
+    {% block title%}OnePlus 8 (8/128GB) Full specification - hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
