--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 8pro/OnePlus_8_Pro.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 8pro/OnePlus_8_Pro.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="oneplus smartphone: all New smartphone review and specification, buy at best price from amazon."> {% endblock desc%}
+{% block desc%}<meta name="description" content="OnePlus released his new smartphone OnePlus 8 Pro at price of Rs.54,999, buy at best price from amazon."> {% endblock desc%}
 {% block key%}<meta name="keywords" content="oneplus 8 pro mobile, oneplus 8 pro mobile price, oneplus 8 pro mobile phone, oneplus 8 pro mobile price list, oneplus 8 pro mobile price in india, oneplus 8 pro price in amazon, oneplus 8 pro flipkart, oneplus 8 pro specification, oneplus 8 pro review, oneplus 8 pro will be available on amazon"> {% endblock key%}
     {% load static %}
-    {% block title%}OnePlus 8 pro Full specification: hipein.com{% endblock title%}
+    {% block title%}OnePlus 8 pro (8/128GB) Full specification - hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
