--- a/limbo/affiliate/templates/mobile/realme/realme 5pro/realme 5pro.html
+++ b/limbo/affiliate/templates/mobile/realme/realme 5pro/realme 5pro.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Realme smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Realme released his new smartphone Realme 5 pro at price of 14,999-INR, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="realme 5 pro,  realme 5 pro price, realme 5 pro price in india, realme 5 pro review, realme 5 pro specification"> {% endblock key%}
     {% load static %}
-    {% block title%}Realme 5 pro Full specification: hipein.com{% endblock title%}
+    {% block title%}Realme 5 pro (6/64GB) Full specification - hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
