--- a/limbo/affiliate/templates/mobile/realme/realme 5s/realme 5s.html
+++ b/limbo/affiliate/templates/mobile/realme/realme 5s/realme 5s.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Realme smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Realme released his new smartphone Realme 5s at price of 10,999-INR, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="realme 5s,  realme 5s price, realme 5s price in india, realme 5s review, realme 5s specification"> {% endblock key%}
     {% load static %}
-    {% block title%}Realme 5s Full specification: hipein.com{% endblock title%}
+    {% block title%}Realme 5s (4/64GB) Full specification - hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
