--- a/limbo/affiliate/templates/mobile/realme/realme 6/realme 6.html
+++ b/limbo/affiliate/templates/mobile/realme/realme 6/realme 6.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Realme smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Realme released his new smartphone Realme 6 at price of 14,999-INR, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="Realme 6, Realme 6 price, Realme 6 price in india, Realme 6 review, Realme 6 specification"> {% endblock key%}
     {% load static %}
-    {% block title%}Realme 6 Full specification: hipein.com{% endblock title%}
+    {% block title%}Realme 6 (4/64GB) Full specification - hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
