--- a/limbo/affiliate/templates/mobile/realme/realme 6pro/realme 6pro.html
+++ b/limbo/affiliate/templates/mobile/realme/realme 6pro/realme 6pro.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Realme smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Realme released his new smartphone Realme 6 Pro at price of 17,999-INR, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="Realme 6 Pro,  Realme 6 Pro price, Realme 6 Pro price in india, Realme 6 Pro review, Realme 6 Pro specification"> {% endblock key%}
     {% load static %}
-    {% block title%}Realme 6 pro Full specification: hipein.com{% endblock title%}
+    {% block title%}Realme 6 pro (4/64GB) Full specification: hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
