--- a/limbo/affiliate/templates/mobile/realme/realme C3/realme C3.html
+++ b/limbo/affiliate/templates/mobile/realme/realme C3/realme C3.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Realme smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Realme released his new smartphone Realme C3 at price of 8,999-INR, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="realme C3,  realme C3 price, realme C3 price in india, realme C3 review, realme C3 specification"> {% endblock key%}
     {% load static %}
-    {% block title%}Realme C3 Full specification: hipein.com{% endblock title%}
+    {% block title%}Realme C3 (3/32GB) Full specification - hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
