--- a/limbo/affiliate/templates/mobile/realme/realme X2 pro/realme X2pro.html
+++ b/limbo/affiliate/templates/mobile/realme/realme X2 pro/realme X2pro.html
@@ -1,18 +1,10 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Realme smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Realme released his new smartphone Realme X2 Pro at price of 29,458-INR, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="realme x2 pro,  realme x2 pro price, realme x2 pro price in india, realme x2 pro review, realme x2 pro specification"> {% endblock key%}
     {% load static %}
-    {% block title%}Realme X2 Pro Full specification: hipein.com {% endblock title%}
+    {% block title%}Realme X2 Pro (6/64GB) Full specification: hipein.com {% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
-    <style>
-      .info{
-        padding-top: 10px;
-      }
-      .info span{
-        color:red;
-      }
-    </style>
     <!-- review and spec -->
     <div class="wrapper">
       <div class="main">
