--- a/limbo/affiliate/templates/mobile/realme/realme X2/realme X2.html
+++ b/limbo/affiliate/templates/mobile/realme/realme X2/realme X2.html
@@ -1,5 +1,5 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Realme smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Realme released his new smartphone Realme X2 at price of 17,999-INR, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="realme x2,  realme x2 price, realme x2 price in india, realme x2 review, realme x2 specification"> {% endblock key%}
     {% load static %}
     {% block style%}
@@ -12,7 +12,7 @@
       }
     </style>
     {% endblock style %}
-    {% block title%}Realme X2 Full specification: hipein.com{% endblock title%}
+    {% block title%}Realme X2 (4/64GB) Full specification: hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
