--- a/limbo/affiliate/templates/mobile/realme/realme X50 pro/realme X50 pro.html
+++ b/limbo/affiliate/templates/mobile/realme/realme X50 pro/realme X50 pro.html
@@ -1,5 +1,5 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Realme smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Realme released his new smartphone Realme X50 Pro at price of 39,999-INR, buy at best price from flipkart. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="realme x50 pro,  realme x50 pro price, realme x50 pro price in india, realme x50 pro review, realme x50 pro specification"> {% endblock key%}
   {% load static %}
   {% block style%}
@@ -12,7 +12,7 @@
     }
   </style>
   {% endblock style %}
-    {% block title%}Realme X50 Full specification: hipein.com{% endblock title%}
+    {% block title%}Realme X50 (6/128GB) Full specification - hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
 
