--- a/limbo/affiliate/templates/mobile/realme/realme c11/realme c11.html
+++ b/limbo/affiliate/templates/mobile/realme/realme c11/realme c11.html
@@ -4,7 +4,7 @@
 Can we play free fire in realme c11"> {% endblock key%}
   {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
-    {% block title%}Realme C11 Full specification: hipein.com{% endblock title%}
+    {% block title%}Realme C11 (2/32GB) Full specification - hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
@@ -27,7 +27,7 @@ Can we play free fire in realme c11"> {% endblock key%}
             <form action="https://www.flipkart.com/realme-c11-rich-green-32-gb/p/itm831d19fd9cdc4">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
             </form>
-            <form action="https://www.flipkart.com/search?q=realme%20c11&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
+            <form action="https://www.flipkart.com/realme-c11-rich-green-32-gb/p/itm831d19fd9cdc4">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           </div>
