--- a/limbo/affiliate/templates/mobile/realme/realme narzo/realme narzo.html
+++ b/limbo/affiliate/templates/mobile/realme/realme narzo/realme narzo.html
@@ -1,6 +1,8 @@
 {% extends 'page/bas.html' %}
-  {% load static %}
-    {% block title%}Realme Narzo Full specification{% endblock title%}
+{% block desc%}<meta name="description" content="Realme released his new smartphone Realme Narzo 10 at price of 11,999-INR, buy at best price from amazon. "> {% endblock desc%}
+{% block key%}<meta name="keywords" content="Realme Narzo 10, Realme Narzo 10, Realme Narzo 10 in india, Realme Narzo 10 review, Realme Narzo 10 specification"> {% endblock key%}
+    {% load static %}
+    {% block title%}Realme Narzo (4/64GB) Full specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <style>
