--- a/limbo/affiliate/templates/page/bas.html
+++ b/limbo/affiliate/templates/page/bas.html
@@ -329,7 +329,7 @@
         <p class="footer_about">Our Foremost motive is to serve you with correct product  review and price info. So, that this marketing arrangement can generate you with honest purchases.</p>
         <a href="https://www.facebook.com/hipeinIndia/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
         <a href="https://www.instagram.com/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-        <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/hipein1"><i class="fa fa-twitter" aria-hidden="true"></i></a>
         <a href="#"><i class="fa fa-google" aria-hidden="true"></i></a>
       </div>
       <div class="product">
