--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 7/OnePlus_7.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 7/OnePlus_7.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="oneplus smartphone: all New smartphone review and specification, buy at best price from amazon."> {% endblock desc%}
+{% block desc%}<meta name="description" content="OnePlus released his new smartphone OnePlus 7 at price of Rs.35,989, buy at best price from amazon."> {% endblock desc%}
 {% block key%}<meta name="keywords" content="oneplus 7 mobile, oneplus 7 mobile price, oneplus 7 mobile phone, oneplus 7 mobile price list, oneplus 7 mobile price in india, oneplus 7 price in amazon, oneplus 7 flipkart, oneplus 7 specification, oneplus 7 review, oneplus 7 will be available on amazon"> {% endblock key%}
     {% load static %}
-    {% block title%}OnePlus 7 Full specification: hipein.com{% endblock title%}
+    {% block title%}OnePlus 7 (8/256GB) Full specification - hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
