--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 7T pro/OnePlus_7T_Pro.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 7T pro/OnePlus_7T_Pro.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="oneplus smartphone: all New smartphone review and specification, buy at best price from amazon."> {% endblock desc%}
+{% block desc%}<meta name="description" content="OnePlus released his new smartphone OnePlus 7T Pro at price of Rs.47,999, buy at best price from amazon."> {% endblock desc%}
 {% block key%}<meta name="keywords" content="oneplus 7T pro mobile, oneplus 7T pro mobile price, oneplus 7T pro mobile phone, oneplus 7T pro mobile price list, oneplus 7T pro mobile price in india, oneplus 7T pro price in amazon, oneplus 7T pro flipkart, oneplus 7T pro specification, oneplus 7T pro review, oneplus 7T pro will be available on amazon"> {% endblock key%}
     {% load static %}
-    {% block title%}OnePlus 7T pro Full specification: hipein.com{% endblock title%}
+    {% block title%}OnePlus 7T pro (8/256GB) Full specification: hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
