--- a/limbo/affiliate/templates/mobile/realme/realme XT/realme XT.html
+++ b/limbo/affiliate/templates/mobile/realme/realme XT/realme XT.html
@@ -1,18 +1,10 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Realme smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Realme released his new smartphone Realme XT at price of 17,999-INR, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="realme XT ,  realme XT  price, realme XT  price in india, realme XT  review, realme XT  specification"> {% endblock key%}
     {% load static %}
-    {% block title%}Realme XT Full specification: hipein.com{% endblock title%}
+    {% block title%}Realme XT (4/64GB) Full specification - hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
-    <style>
-      .info{
-        padding-top: 10px;
-      }
-      .info span{
-        color:red;
-      }
-    </style>
     <!-- review and spec -->
     <div class="wrapper">
       <div class="main">
@@ -29,11 +21,15 @@
           <p><span>Realme XT</span> having  6.4-inch Super AMOLED full-HD+ display on the Realme XT also has <span>Gorilla Glass 5</span> for protection with an in-display fingerprint sensor underneath, which is quick at authentication and we didn't face any misreads during our usage. he Realme XT feels premium, is comfortable to carry around and isn't very heavy at 183g.</p>
           <p>Talk about camera it's has 64-megapixel sensor. This is the first phone in India to feature Samsung's GW1 image sensor, which boasts of a 1/1.72-inch sensor and 4-in-1 pixel binning, which saves a 16-megapixel resultant image. You can shoot at the full 64-megapixel resolution too, if needed.</p>
           <p>The <span>Realme XT</span> is powered by the <span>Snapdragon 712 SoC</span> and is available in three RAM and storage configurations — 4GB of RAM and 64GB of storage (Rs. 15,999); 6GB of RAM and 64GB of storage (Rs. 16,999); and 8GB of RAM and 128GB of storage (Rs. 18,999), which is the version we have. The flash storage used is UFS 2.1. The Realme XT also has dual-band Wi-Fi 802.11ac, Bluetooth 5, dual 4G VoLTE, GPS, FM radio and the usual suite of sensors.The Realme XT features a 4000mAh battery.</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/realme-Pearl-White-64GB-Storage/dp/B07Y7LGTF4/ref=mp_s_a_1_1?dchild=1&keywords=realme+xt&qid=1594897188&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-            <a href="https://www.amazon.in/realme-Pearl-White-64GB-Storage/dp/B07Y7LGTF4/ref=mp_s_a_1_1?dchild=1&keywords=realme+xt&qid=1594897188&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/realme-Pearl-White-64GB-Storage/dp/B07Y7LGTF4/ref=mp_s_a_1_1?dchild=1&keywords=realme+xt&qid=1594897188&sr=8-1">
+              <button class="https://www.amazon.in/realme-Pearl-White-64GB-Storage/dp/B07Y7LGTF4/ref=mp_s_a_1_1?dchild=1&keywords=realme+xt&qid=1594897188&sr=8-1" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.flipkart.com/realme-x50-pro-rust-red-128-gb/p/itm13d1770db35a3?pid=MOBFPBBKTDX2EKEH&lid=LSTMOBFPBBKTDX2EKEHAKFQ0C&marketplace=FLIPKART&pageUID=1594896068771">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
