--- a/limbo/affiliate/templates/blog/programing/python_venv.html
+++ b/limbo/affiliate/templates/blog/programing/python_venv.html
@@ -1,5 +1,5 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content=""> {% endblock desc%}
+{% block desc%}<meta name="description" content=" In this entire article i will teach you how to create python virtual Environment ?. If you not install python IDE in your desktop yet, then installed pyhton from here and choose python step up according to your OS."> {% endblock desc%}
 {% block key%}<meta name="keywords" content="how to create python virtual Environment, python virtual Environment windows, python create virtual Environment, activate virtualenv window,  virtualenv python version, virtualenv python
  ">{% endblock key%}
  {% block style %}
